# HiveMind_RAG

./: .cursorrules  .gitignore  CONTRIBUTING.md  DEV_NOTES.md  HIVE.md  LOG-REQ026-EXECUTION.md  LOG-SYSTEM-STABILIZATION.md  README.md  REGISTRY.md  TODO.md  TODO_REQ026_MICROPLAN.md  coverage.xml  docker-compose.prod.yml  hm.bat  index.html  pytest_out.txt  rag_eval_report.md  requirements.txt  run.bat  skills-lock.json  sonar-project.properties  test_query.py  tmp_demo_query.py  tmp_probe_graph.py  tmp_probe_graph_v2.py  夏瑾 Pro 比邻星 1.90.json  提示词工程及预设.md
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  coverage.xml  coverage_governance.xml  coverage_rag.xml  coverage_report.txt  debug.txt  debug_ch.txt  debug_chat.py  debug_import.py  debug_out.txt  debug_token.py  demo_quote_intel.py  dump_routes.py  graph_stats.txt  hivemind.db  list_routes.py  mcp_config.json  mcp_servers.json  out.txt  phase1_check.py  pyproject.toml  pytest.ini  requirements.txt  temp.txt  test_out.txt  test_out_ascii.txt  test_out_full.txt  test_out_new.txt  test_out_utf8.txt  test_results.txt  test_run.txt  test_trace.txt  timebombs_report.txt  tmp_reflect.py  trace.txt  verify_ab_testing.py  (+2 more)
backend/alembic/: env.py
backend/alembic/versions/: 1f452e2c036e_create_missing_tables.py  29f4947caa3e_add_cache_fields_to_llm_metric.py  2ab477643a2a_add_details_to_swarm_traces_and_spans.py  3a93207357a7_add_observability_models_for_v3_swarm.py  50b82d61e0ea_add_obs_rag_query_traces.py  5385c217a208_add_knowledgebasepermission.py  7b75b52cf7fe_add_swarm_memory_and_learning_models_.py  7c82bc6e1ede_add_status_to_tech_discovery.py  9c21d5a7b2f1_add_structured_fields_to_swarm_reflections.py  a1b2c3d4e5f6_add_composite_performance_indexes.py  a1b2c3d4e5f6_multi_tenant.py  b2c3d4e5f6a7_add_folder_path_to_documents.py  b2c3d4e5f6a7_multi_tenant_phase2.py  c050cf2032fd_add_baseline_metrics_table.py  c3d4e5f6a7b8_tenant_usage.py  cc8659313273_add_swarm_observability.py  cdbdf2219632_add_builder_assistant_models.py  d4e5f6a7b8c9_quota_cost_warn.py  d7fe400c862e_add_ab_execution_metrics_to_swarm_trace.py  d86a534d514c_add_predictive_fields_to_rag_trace.py  da91e273ef7e_add_episodic_memory_table.py  e5f6a7b8c9d0_tenant_secrets.py  f44181f5b576_init_complete_schema.py  f6a7b8c9d0e1_quota_rate_limit.py  fa6c0440d897_add_missing_evaluation_metrics.py  g7c8d9e0f1a2_quotes.py
backend/app/: __init__.py  main.py  main_cli.py
backend/app/agents/: __init__.py  agentic_search.py  base.py  bus.py  compactor.py  engine.py  jit_navigation.py  llm_router.py  mcp_manager.py  memory.py  parsers.py  routing_watchdog.py  schemas.py  scopes.py  search_subagents.py  skills.py  swarm.py  tool_index.py  tool_types.py  tools.py
backend/app/api/: __init__.py  deps.py
backend/app/audit/: __init__.py  logger.py  rate_limiter.py  sanitizer.py
backend/app/auth/: __init__.py  permissions.py  security.py
backend/app/batch/: __init__.py  checkpointer.py  controller.py  engine.py  models.py  pipeline.py  task_queue.py  worker_pool.py
backend/app/common/: __init__.py  base.py  enums.py  pagination.py  protocol.py  response.py
backend/app/core/: __init__.py  celery_app.py  config.py  database.py  deps.py  embeddings.py  exceptions.py  graph_store.py  init_data.py  llm.py  llm_factory.py  logging.py  redis.py  reranker.py  security.py  semantic_id_mapper.py  storage.py  tenant_context.py  token_service.py  tracing.py  vector_store.py
backend/app/learning/: __init__.py  engine.py
backend/app/llm/: __init__.py  guardrails.py  router.py  tracker.py
backend/app/mcp/: __init__.py
backend/app/mcp_bridge/: manager.py
backend/app/memory/: __init__.py  manager.py
backend/app/models/: __init__.py  agents.py  builder.py  chat.py  episodes.py  episodic.py  evaluation.py  evolution.py  finetuning.py  governance.py  intent.py  knowledge.py  learning.py  observability.py  pipeline_config.py  pipeline_log.py  quote.py  security.py  sync.py  tags.py  tenant.py  usage.py
backend/app/prompts/: dialect.py  engine.py  loader.py
backend/app/rag/: __init__.py  pipeline.py
backend/app/schemas/: __init__.py  artifact.py  audit.py  auth.py  chat.py  governance.py  knowledge.py  knowledge_protocol.py  monitor.py  security.py  tags.py  ws.py
backend/app/scripts/: ab_benchmark_runner.py  github_collab.py  seed_security.py  smoke_test_ab.py  sync_github_issues.py
backend/app/sdk/: README.md  __init__.py  agent.py  bootstrap.py  rag.py  spec_engine.py
backend/app/services/: audit_service.py  cache_service.py  chat_service.py  claw_router_governance.py  dependency_circuit_breaker.py  event_subscribers.py  export_service.py  indexing.py  (+25 more)
backend/scratch/: check_reqs.py  check_users.py  heal_mapping.py  probe_graph.py  probe_mapping.py  probe_output.txt  req_data.json  reset_auth.py  semantic_alignment_scanner.py  test_bcrypt.py  test_full_login.py  test_token.py
backend/scripts/: align_architecture_graph.py  approve_skill.py  audit_architecture_drift.py  audit_integrity_check.py  audit_knowledge_freshness.py  audit_llm_costs.py  auto_link_requirements.py  baseline_llm.py  check_infra.py  check_l4_directives.py  check_node_isolation.py  check_registration_coverage.py  cleanup_junk_data.py  cleanup_kb_sql.py  clear_cache.py  create_github_milestone_from_todo.py  create_superuser.py  db_deadlock_drill.py  detect_timebombs.py  diagnose_empty_names.py  drill_scenario_f.py  elite_trace_harvester.py  experience_learner.py  export_openapi.py  fix_admin_role.py  gate_l4_process_integrity.py  generate_synthetic_dataset.py  generate_weekly_learning_report.py  graph_alignment_diagnostics.py  harden_audit_logs.py  industrial_index.py  ingest_eval_data.py  init_all_tables.py  init_gov_tables.py  init_obs_tables.py  inspect_results.py  inspect_results_v2.py  l3_dashboard_sync.py  live_test_high_level_swarm.py  local_diagnostic.py  (+74 more)
backend/storage/: llm_governance.json  social_wisdom_cache.json
backend/tests/: conftest.py  smoke_builder.py  test_batch_engine.py  test_ingestion_pipeline.py  test_unified_logging.py  verify_phase1_2.py
(+1034 files in other folders)
