[project]
name = "hivemind-rag"
version = "0.1.0"
description = "Enterprise RAG platform with Agent Swarm architecture"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # === Web Framework ===
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.18",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",

    # === LLM & Agent ===
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-community>=0.3.0",
    "langgraph>=0.2.0",
    "langchain-mcp-adapters>=0.1.0",
    "openai>=1.50.0",
    "instructor>=1.4.0",

    # === Embedding & Vector Store ===
    "sentence-transformers>=3.0.0",
    "chromadb>=0.5.0",

    # === Database ===
    "sqlmodel>=0.0.22",
    "asyncpg>=0.30.0",
    "aiosqlite>=0.19.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.14.0",
    "redis>=5.0.0",

    # === Document Processing ===
    "unstructured>=0.16.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "pymupdf>=1.25.0",

    # === MCP ===
    "mcp>=1.0.0",

    # === Observability & Tasks ===
    "loguru>=0.7.0",
    "celery>=5.3.0",

    # === Knowledge Graph ===
    "neo4j>=5.14.0",
    "networkx>=3.0",

    # === Utilities ===
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "httpx>=0.28.0",
    "aiofiles>=24.1.0",
    "RestrictedPython>=7.4",
    "tiktoken>=0.8.0",
]

[tool.setuptools]
packages = ["app"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-html>=4.1.0",
    "pytest-repeat>=0.9.3",
    "pytest-env>=1.1.3",
    "hypothesis>=6.100.0",
    "mutmut>=2.5.0",
    "ruff>=0.8.0",
    "black>=24.0.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]

# ── Ruff (Linter) ──────────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]
ignore = ["B008", "RUF001", "RUF002", "RUF003"]

# ── Black (Formatter) ──────────────────────────
[tool.black]
target-version = ["py311"]
line-length = 120

# ── Mypy (Static Type Checker) ─────────────────
[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = false
warn_unused_configs = true
warn_unused_ignores = true
check_untyped_defs = true
ignore_missing_imports = true
implicit_reexport = true
pretty = true

[tool.coverage.run]
source = ["app"]
omit = ["app/main.py", "*/tests/*"]

[tool.coverage.report]
fail_under = 60
show_missing = true
precision = 2
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
    "raise NotImplementedError",
]
metadata = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml:coverage.xml",
    "--html=logs/testing/report.html",
    "--self-contained-html",
]
markers = [
    "graph: Link test to architectural graph nodes (req, asset)",
    "fuzz: Property-based tests",
    "api: Integration tests for endpoints",
]

[tool.pytest_env]
TESTING = "1"
DATABASE_URL = "sqlite+aiosqlite:///:memory:"
VECTOR_STORE_TYPE = "mock"
NEO4J_URI = "bolt://localhost:7687"
LOG_LEVEL = "DEBUG"
