[project]
name = "hivemind-rag"
version = "0.1.0"
description = "Enterprise RAG platform with Agent Swarm architecture"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # === Web Framework ===
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.18",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",

    # === LLM & Agent ===
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-community>=0.3.0",
    "langgraph>=0.2.0",
    "langchain-mcp-adapters>=0.1.0",

    # === Embedding & Vector Store ===
    "sentence-transformers>=3.0.0",
    "chromadb>=0.5.0",

    # === Database ===
    "sqlmodel>=0.0.22",
    "asyncpg>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.14.0",
    "redis>=5.0.0",

    # === Document Processing ===
    "unstructured>=0.16.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "pymupdf>=1.25.0",

    # === MCP ===
    "mcp>=1.0.0",

    # === Observability & Tasks ===
    "loguru>=0.7.0",
    "celery>=5.3.0",

    # === Knowledge Graph ===
    "neo4j>=5.14.0",
    "networkx>=3.0",

    # === Utilities ===
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "httpx>=0.28.0",
    "aiofiles>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-html>=4.1.0",
    "allure-pytest>=2.13.0",
    "ruff>=0.8.0",
    "black>=24.0.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]

# ── Setuptools package discovery ────────────────────────
# Flat layout has multiple top-level dirs (app/data/alembic);
# explicitly include only `app` so editable install works on CI.
[tool.setuptools.packages.find]
include = ["app", "app.*"]
exclude = ["data*", "alembic*", "tests*", "scripts*", "benchmarks*", "logs*", "storage*", "exports*", "htmlcov*", "start_data*"]

# ── Ruff (Linter) ──────────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

# ── Black (Formatter) ──────────────────────────
[tool.black]
target-version = ["py311"]
line-length = 120

# ── Mypy (Static Type Checker) ─────────────────
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

# ── Pytest + Coverage ──────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
markers = [
    "unit: 单元测试 (快速, 无外部依赖)",
    "integration: 集成测试 (需要 DB)",
    "e2e: 端到端测试",
    "slow: 慢速测试 (> 5s)",
]
addopts = [
    "-v",
    "--tb=short",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml:coverage.xml",
    "--alluredir=allure-results",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "app/main.py",
    "app/core/database.py",
    "app/core/config.py",
    "app/scripts/*",
    "app/logs/*",
    "app/prompts/*",
    "*/tests/*",
]

[tool.coverage.report]
fail_under = 50
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
    "pass",
    "\\.\\.\\.",
]
